new proj/src/objects/GE_HQ_Country_Information__c.object
<CustomObject>
    <description>The business team needs the publish Marketing data by country for the purpose of scoping Opportunites. Specific data needs are Country Energy Strategy, Competition, Country CTQ&apos;s, Economic Environment,Industry Changes, Perspective, Gas Prices in the country, Electricity prices, emission limits, grid code, TAM &amp; SAS, Region and Sub Region, and P&amp;L.</description>
    <fields>
        <fullName>GE_HQ_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_HQ_CTQ__c</fullName>
        <inlineHelpText>Country-specific customers&apos; CTQ&apos;s</inlineHelpText>
        <label>CTQ&apos;s</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Competition__c</fullName>
        <inlineHelpText>Level of competition in energy services in the country</inlineHelpText>
        <label>Competition</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Country_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Name</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Country Informations</relationshipLabel>
        <relationshipName>Country_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Economic_Environment__c</fullName>
        <inlineHelpText>Economic Environment (indicate econ.healthiness of the country)</inlineHelpText>
        <label>Economic Environment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Electricity_Price__c</fullName>
        <label>Electricity Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Emission_Regls__c</fullName>
        <inlineHelpText>Emissions regulations [Nox/CO]</inlineHelpText>
        <label>Emission Regulations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Energy_Strategy__c</fullName>
        <inlineHelpText>Country energy strategy</inlineHelpText>
        <label>Energy Strategy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Gas_Price__c</fullName>
        <label>Gas Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Grid_Code__c</fullName>
        <inlineHelpText>Grid code requirements</inlineHelpText>
        <label>Grid Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Industry_Changes__c</fullName>
        <inlineHelpText>Growth/Industry Changes</inlineHelpText>
        <label>Industry Changes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Perspective__c</fullName>
        <label>Perspective</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Reg_DeReg_Mkt__c</fullName>
        <label>Regulated/De-regulator Market</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Country Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GE_HQ_CountryName_Change</fullName>
        <active>true</active>
        <description>You cannot change the Country Name on this record.</description>
        <errorConditionFormula>ISCHANGED( GE_HQ_Country_Name__c )</errorConditionFormula>
        <errorMessage>You cannot change the Country Name on this record.</errorMessage>
    </validationRules>
</CustomObject>